# isafruit

./: .env.example  .env.local.example  .gitignore  README.md  SETUP.md  package-lock.json  package.json  tsconfig.json
config/: dataset.config.json  index.ts
docs/: CLIENT_SIDE_INFERENCE_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  YOLO_SETUP.md
scripts/: README.md  download-model.ts  terminalUtils.ts
scripts/convert-model/: pyproject.toml
scripts/model/: main.py  pyproject.toml
scripts/model/model-convertor/: main.py
scripts/model/prepare-data/: main.py
scripts/model/train-model/: main.py
scripts/prepare-data/: main.ts
scripts/prepare-data/steps/: datasets-preparation.ts  download.ts  index.ts  kaggle-cli.ts  train-model.ts
scripts/prepare-model/: main.ts
scripts/prepare-model/steps/: config-file.ts  datasets-preparation.ts  download-datasets.ts  download.ts  index.ts  kaggle-cli.ts  train-model.ts
services/model/: README.md  pyproject.toml
services/model/inference/: main.py
services/model/photo-detect/: main.py
services/model/prepare-data/: download.py  main.py
services/model/train-model/: main.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/inference/: route.ts
src/app/api/photo-detect/: route.ts
src/app/api/webrtc/: route.ts
src/app/classification/: layout.tsx  loading.tsx
src/app/classification/health-analyzer/: page.tsx
src/app/classification/photo/: loading.tsx  page.tsx
src/app/classification/video/: page.tsx
src/app/health-analyzer/: layout.tsx  page.tsx
src/app/license/: page.tsx
src/app/note/: page.tsx
src/app/photo/: page.tsx
src/components/: PhotoCapture.tsx  WebcamSelector.tsx  YOLODetector.tsx  app-sidebar.tsx  detection-preview.tsx  footer.tsx  header.tsx  logo.tsx  nav-main.tsx  site-header.tsx
src/components/layout/: header.tsx  logo.tsx  settings.tsx
src/config/: index.ts
src/lib/: responseConvertor.ts
src/lib/webrtc/: client.ts
src/lib/yolo/: postprocessing.ts  preprocessing.ts  types.ts
src/stores/: serverStore.ts
src/types/: index.ts  store.ts
types/: index.ts
